packages/optimizer/core/src/snapshots/qwik_core__test__snapshot_map_to_each_simple.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$ } from '@qwik.dev/core';

export const App = component$(() => {
  const items = { value: [{ key: 'a', text: 'A' }] };
  return <div>{items.value.map(item => <div key={item.key}>{item.text}</div>)}</div>;
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0");
//
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,OAAO,MAAM,oBAAM,0CAGhB\"}")
============================= test.tsx_App_component_div_Each_item_f829DjfZibU.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
//
export const App_component_div_Each_item_f829DjfZibU = (item)=>/*#__PURE__*/ _jsxSorted("div", null, null, _wrapProp(item, "text"), 1, null);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;wDAK+B,qBAAQ,WAAC,6BAAoB\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_Each_item_f829DjfZibU",
  "entry": null,
  "displayName": "test.tsx_App_component_div_Each_item",
  "hash": "f829DjfZibU",
  "canonicalFilename": "test.tsx_App_component_div_Each_item_f829DjfZibU",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "jSXProp",
  "ctxName": "item$",
  "captures": false,
  "loc": [
    0,
    0
  ],
  "paramNames": [
    "item"
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { Each } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_App_component_div_Each_item_f829DjfZibU = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_div_Each_item_f829DjfZibU"), "App_component_div_Each_item_f829DjfZibU");
const q_App_component_div_Each_key_07Oo5ReT59I = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_div_Each_key_07Oo5ReT59I"), "App_component_div_Each_key_07Oo5ReT59I");
//
export const App_component_ckEPmXZlub0 = ()=>{
    const items = {
        value: [
            {
                key: 'a',
                text: 'A'
            }
        ]
    };
    return /*#__PURE__*/ _jsxSorted("div", null, null, _jsxSorted(Each, null, {
        items: _wrapProp(items),
        key$: q_App_component_div_Each_key_07Oo5ReT59I,
        item$: q_App_component_div_Each_item_f829DjfZibU
    }, null, 3, null), 1, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;yCAG8B;IAC5B,MAAM,QAAQ;QAAE,OAAO;YAAC;gBAAE,KAAK;gBAAK,MAAM;YAAI;SAAE;IAAC;IACjD,qBAAO,WAAC,mBAA6B;yBAAxB;;;;AACf\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    78,
    227
  ]
}
*/
============================= test.tsx_App_component_div_Each_key_07Oo5ReT59I.js (ENTRY POINT)==

export const App_component_div_Each_key_07Oo5ReT59I = (item)=>item.key;


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"uDAK+B,OAAkB,KAAK,GAAG\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_Each_key_07Oo5ReT59I",
  "entry": null,
  "displayName": "test.tsx_App_component_div_Each_key",
  "hash": "07Oo5ReT59I",
  "canonicalFilename": "test.tsx_App_component_div_Each_key_07Oo5ReT59I",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "jSXProp",
  "ctxName": "key$",
  "captures": false,
  "loc": [
    0,
    0
  ],
  "paramNames": [
    "item"
  ]
}
*/
== DIAGNOSTICS ==

[]
