packages/optimizer/core/src/snapshots/qwik_core__test__snapshot_map_to_each_skips_dynamic_item_component.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 7408
expression: output
---
==INPUT==


import { component$ } from '@qwik.dev/core';

export const App = component$(() => {
  const logos = [{ title: 'Qwik', alt: 'Qwik', Logo, downloadHref: '/logos/qwik.svg' }];
  return <div>{logos.map((item) => (
    <Card key={item.title} title={item.title}>
      <item.Logo alt={item.alt} />
    </Card>
  ))}</div>;
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0");
//
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,OAAO,MAAM,oBAAM,0CAOhB\"}")
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
//
export const App_component_ckEPmXZlub0 = ()=>{
    const logos = [
        {
            title: 'Qwik',
            alt: 'Qwik',
            Logo,
            downloadHref: '/logos/qwik.svg'
        }
    ];
    return /*#__PURE__*/ _jsxSorted("div", null, null, logos.map((item)=>/*#__PURE__*/ _jsxSorted(Card, {
            title: _wrapProp(item, "title")
        }, null, /*#__PURE__*/ _jsxSorted(item.Logo, {
            alt: _wrapProp(item, "alt")
        }, null, null, 3, "u6_0"), 1, item.title)), 1, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;yCAG8B;IAC5B,MAAM,QAAQ;QAAC;YAAE,OAAO;YAAQ,KAAK;YAAQ;YAAM,cAAc;QAAkB;KAAE;IACrF,qBAAO,WAAC,mBAAK,MAAM,GAAG,CAAC,CAAC,qBACtB,WAAC;YAAsB,KAAK,YAAE;+BAC5B,WAAC,KAAK,IAAI;YAAC,GAAG,YAAE;sCADP,KAAK,KAAK;AAIzB\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    78,
    320
  ]
}
*/
== DIAGNOSTICS ==

[
  {
    "category": "warning",
    "code": "map-to-each",
    "file": "test.tsx",
    "message": "This .map() was not optimized to Each because the rendered component type depends on the callback item.",
    "highlights": [
      {
        "lo": 190,
        "hi": 310,
        "startLine": 6,
        "startCol": 16,
        "endLine": 10,
        "endCol": 4
      }
    ],
    "suggestions": [
      "Keep the original .map() render loop, or render a statically referenced component type."
    ],
    "scope": "optimizer"
  }
]
