packages/optimizer/core/src/snapshots/qwik_core__test__snapshot_map_to_each_with_key_capture.snap
---
source: packages/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$ } from '@qwik.dev/core';

export const App = component$(() => {
  const items = [{ id: 'a', text: 'A' }];
  const prefix = { value: 'item:' };
  return <div>{items.map((item) => <span key={prefix.value + item.id}>{item.text}</span>)}</div>;
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0");
//
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,OAAO,MAAM,oBAAM,0CAIhB\"}")
============================= test.tsx_map_item_nf66XgXHgFs.js (ENTRY POINT)==

import { _captures } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
//
export const map_item_nf66XgXHgFs = (item)=>{
    _captures[0];
    return /*#__PURE__*/ _jsxSorted("span", null, null, _wrapProp(item, "text"), 1, null);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;qCAM0B;;yBAAS,WAAC,8BAAmC\"}")
/*
{
  "origin": "test.tsx",
  "name": "map_item_nf66XgXHgFs",
  "entry": null,
  "displayName": "test.tsx_map_item",
  "hash": "nf66XgXHgFs",
  "canonicalFilename": "test.tsx_map_item_nf66XgXHgFs",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "jSXProp",
  "ctxName": "item$",
  "captures": false,
  "loc": [
    0,
    0
  ],
  "paramNames": [
    "item"
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { _map } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_map_item_nf66XgXHgFs = /*#__PURE__*/ qrl(()=>import("./test.tsx_map_item_nf66XgXHgFs"), "map_item_nf66XgXHgFs");
const q_map_key_bn60zrX6S0A = /*#__PURE__*/ qrl(()=>import("./test.tsx_map_key_bn60zrX6S0A"), "map_key_bn60zrX6S0A");
//
export const App_component_ckEPmXZlub0 = ()=>{
    const items = [
        {
            id: 'a',
            text: 'A'
        }
    ];
    const prefix = {
        value: 'item:'
    };
    return /*#__PURE__*/ _jsxSorted("div", null, null, /*#__PURE__*/ _map(items, (item)=>_jsxSorted("span", null, null, _wrapProp(item, "text"), 1, prefix.value + item.id), q_map_key_bn60zrX6S0A, q_map_item_nf66XgXHgFs, [
        prefix
    ]), 1, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;yCAG8B;IAC5B,MAAM,QAAQ;QAAC;YAAE,IAAI;YAAK,MAAM;QAAI;KAAE;IACtC,MAAM,SAAS;QAAE,OAAO;IAAQ;IAChC,qBAAO,WAAC,sCAAK,OAAU,CAAC,OAAS,WAAC,8BAAmC,kBAAzB,OAAO,KAAK,GAAG,KAAK,EAAE;;;AACpE\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    78,
    264
  ]
}
*/
============================= test.tsx_map_key_bn60zrX6S0A.js (ENTRY POINT)==

import { _captures } from "@qwik.dev/core";
//
export const map_key_bn60zrX6S0A = (item)=>{
    const prefix = _captures[0];
    return prefix.value + item.id;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;oCAM0B;;WAAoB,OAAO,KAAK,GAAG,KAAK,EAAE\"}")
/*
{
  "origin": "test.tsx",
  "name": "map_key_bn60zrX6S0A",
  "entry": null,
  "displayName": "test.tsx_map_key",
  "hash": "bn60zrX6S0A",
  "canonicalFilename": "test.tsx_map_key_bn60zrX6S0A",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "jSXProp",
  "ctxName": "key$",
  "captures": false,
  "loc": [
    0,
    0
  ],
  "paramNames": [
    "item"
  ]
}
*/
== DIAGNOSTICS ==

[]
